Fixed some styling which for some reason had broken on latest docker pull

--- a/frontend/src/components/active-group-list/ActiveGroupList.module.scss
+++ b/frontend/src/components/active-group-list/ActiveGroupList.module.scss
@@ -4,7 +4,7 @@
   justify-content: center;
   align-content: flex-start;
   padding: 4em 0;
-  width: 45%;
+  width: 50%;
 
 
   @media (max-width: 810px) {
